[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-http-server-upload"
version = "0.3.4"
description = "A small HTTP file server with directory browsing and uploads."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "yangyongbao", email = "yangyongbao@126.com"},
]
keywords = ["http", "server", "upload", "file-sharing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/freelamb/simple_http_server"
Source = "https://github.com/freelamb/simple_http_server"
Issues = "https://github.com/freelamb/simple_http_server/issues"

[project.scripts]
simple-http-server-upload = "simple_http_server:main"

[tool.setuptools]
py-modules = ["simple_http_server"]
